# jenkins

./: Jenkinsfile  Jenkinsfile_new  README.md  atlJenkins  install.py  packages.sh  setup_compiler  x11vnc.txt
asisdeb/: AquetiAPI-x86_64-2.0.6.1_beta.deb  README  asisd.service  docker-compose.yml  homunculusd.service  makeAsisDeb.sh  postinst  saveAsisImages.sh
docker/: Dockerfile
docker/install/: homunculus.conf  prep.sh  setup.sh  supervisord.conf
nmon/: nmon.cron  nmon.service
notebooks/: wt_assess.ipynb
others/: atlJenkins  setup_compiler.sh
pipeline/: Jenkinsfile  Jenkinsfile2  junit  matrix
pipeline/bash_src/: genMainPage.sh  run.sh
pipeline_new/: Jenkinsfile
pipeline_new/bash/: genMainPage.sh  genReleasePage.sh  install.sh
qwsdeb/: homunculusd.service  makeQWebServerDeb.sh  postinst  postrm  preinst  prerm
reports/app/: __init__.py  config.py  emails.py  forms.py  routes.py  src.py  views.py
reports/scripts/: insert_cases.py
sysinfo/: run.py
sysinfo/app/: __init__.py  config.py  forms.py  routes.py  src.py
sysinfo/get_info/: main.py
sysinfo/infoprovider/: get_info.py  provider.py  service.py
testScripts/: atlTest.sh  daemon_alive.py  focus_power_cycle.py
testScripts/apitest/: CMakeLists.txt  apitest.h  apitest_high.cpp  apitest_low.cpp
testScripts/apitest/include/: apitest.h
testScripts/apitest/new/: apitest.cpp  apitest.h  apitests.cpp
testScripts/apitest/scripts/: apitest_high.cpp  apitest_low.cpp  apitests.cpp
testScripts/apitest/src/: apitest.cpp
testScripts/newapitest/: .cproject  .project  CMakeLists.txt
testScripts/others/: .api_check.py.swp  api_check.py.save  check_conts.py  checkout_acos.py  config_check  (+15 more)
testScripts/tests/: CMakeLists.txt  clean.sh  clip_stream_1.cpp  cliprec_1.cpp  cliprec_2.cpp  cliprecovery.cpp  compile.sh  conn_1.cpp  conn_2.cpp  conn_3.cpp  conn_4.cpp  global_gain_1.cpp  global_shutter_1.cpp  global_wb_1.cpp  livestream_1.cpp  livestream_2.cpp  livestream_3_1.cpp  livestream_3_2.cpp  livestream_3_3.cpp  livestream_3_4.cpp  livestream_3_5.cpp  livestream_4.cpp  livestream_5.cpp  mcam_props_1.cpp  mcam_props_2.cpp  mcam_props_3.cpp  mcam_props_4.cpp  run.sh  stream_props.cpp  tests.h
testScripts/tests/include/: tests.h
testScripts/tests/scripts/: cam_model.cpp  clip_model.cpp  clip_stream_1.cpp  cliprec_1.cpp  cliprecovery.cpp  clipstream_1.cpp  conn_2.cpp  dr_frames_mcam_high.cpp  dr_frames_mcam_low.cpp  dr_frames_v2.cpp  global_shutter_1.cpp  livestream_1_1.cpp  livestream_2.cpp  livestream_3_1.cpp  livestream_3_2.cpp  livestream_3_3.cpp  livestream_3_4.cpp  livestream_3_6.cpp  livestream_4.cpp  livestream_5.cpp  mcam_props_1.cpp  mcam_props_3.cpp  mcam_props_4.cpp  mcam_stream_1_high.cpp  mcam_stream_1_low.cpp  run.sh  stream_props.cpp
testScripts/tests/src/: tests.cpp
(+63 files in other folders)
